--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node ./src/index.js",
     "recoverEans": "cross-env NODE_ENV=production node ./src/maintenance/recoverEans.js",
+    "correctEans": "cross-env NODE_ENV=production node ./src/maintenance/correctEans.js",
     "test": "jest"
   },
   "repository": {
