--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "fs-jetpack": "^5.1.0",
+    "gpt-tokenizer": "^2.1.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.7.0",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "openai": "^4.52.7"
   }
 }
