--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@date-fns/utc": "^1.2.0",
     "axios": "^1.7.2",
     "cronjobs-arbitrage": "file:",
     "fs-jetpack": "^5.1.0",
