feat: add extensive logging, retry logic if batch not found

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node-schedule": "^2.1.7",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
