--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "cronjobs-arbitrage": "file:",
     "fs-jetpack": "^5.1.0",
     "gpt-tokenizer": "^2.1.2",
+    "https-proxy-agent": "^7.0.5",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "mongodb": "^6.7.0",
     "node-schedule": "^2.1.1",
     "openai": "^4.52.7",
+    "p-queue": "^8.0.1",
     "pino": "^9.4.0",
     "ts-jest": "^29.2.2"
   }
