--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.36.3",
     "@date-fns/utc": "^1.2.0",
+    "@mistralai/mistralai": "^1.5.0",
     "axios": "^1.7.2",
     "cronjobs-arbitrage": "file:",
     "fs-jetpack": "^5.1.0",
@@ -56,6 +58,7 @@
     "openai": "^4.52.7",
     "p-queue": "^8.1.0",
     "pino": "^9.4.0",
-    "ts-jest": "^29.2.2"
+    "ts-jest": "^29.2.2",
+    "zod": "^3.24.2"
   }
 }
